--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,10 +1,24 @@
-# Experience template
 - layout: left
-  company: Company name
-  link: Link to company (optional)
-  job_title: Job title
-  dates: Date Range (eg. November 2016 - present)
-  quote: >
-   Short description of the company (optional)
-  description: | # this will include new lines to allow paragraphs
-    Description of role
+  company: Karmarama
+  job_title: "Javascript Middleware Developer"
+  dates: "March 2020 to May 2020"
+  quote: "<mark>Node</mark>  <mark>GraphQL</mark>  <mark>AWS</mark>  <mark>Serverless</mark> <mark>Lambda</mark> <mark>Typescript</mark>\n"
+  description: "Responsible for managing the interchange of data between Google DV360 and the frontend through a GraphQL API,\ndevelopment of all server-side logic and ensuring high performance and responsiveness to requests.\n\n* Refactor existing code source based on best-practices & standards.\n* Writing reusable, testable, and efficient code.\n* Well-practiced Test driven development.\n* Design and implementation of low-latency, high-availability, and performant applications.\n* Implementation of security and data protection.\n* Integration of data storage solutions.\n"
+- layout: left
+  company: "KFC Western Europe"
+  job_title: "Javascript Software Developer"
+  dates: "February 2019 to November 2019"
+  quote: "<mark>Node</mark>  <mark>React</mark>  <mark>AWS</mark>  <mark>Serverless</mark> <mark>Lambda</mark> <mark>Postgres</mark> <mark>Redis</mark> <mark>Typescript</mark>\n"
+  description: "Develop and design integrations between our digital ordering systems, point of sale system, payment solutions \nand related tools to support those systems. Develop internal applications to allow for digital orders placed through \n3rd party integrations. \n\n* Ensure data integrity between systems through integration layers.\n* Migrated legacy codebase (Heroku) into new AWS Technical Architecture that supported a new digital transformation \n  project whilst maintaining high availability for existing services with a broad scope that included frontend, backend, POS systems and Salesforce.\n* Design and develop new user-facing and backend features.\n* Develop specications and designs for complex applications whilst modifying/maintaining complex existing applications.\n* Perform code analysis, requirements analysis, identication of code metrics, system risk analysis and software reliability analysis.\n* Performance tuning, improvement, balancing, usability, testing.\n* Design and develop backend services and structure.\n"
+- layout: left
+  company: Preqin
+  job_title: "Javascript Software Developer"
+  dates: "November 2018 to February 2019"
+  quote: "<mark>Node</mark>  <mark>React</mark>  <mark>Redux</mark>  <mark>Typescript</mark> <mark>ElasticSearch</mark>\n"
+  description: "Develop and enhance the main front end platform - website. Design and develop new user-facing\nfeatures. \n* Develop specications and designs for complex applications or modifying/maintaining \ncomplex existing applications. \n* Perform code analysis, requirements analysis, identication of code metrics, \nsystem risk analysis and software reliability analysis. \n* Performance tuning, improvement, balancing, usability, testing.\n"
+- layout: left
+  company: MelodyVR
+  job_title: "Javascript Software Developer"
+  dates: "November 2018 to February 2019"
+  quote: "<mark>Node</mark>  <mark>React</mark>  <mark>Redux</mark> \n<mark>AWS</mark>  <mark>Serverless</mark> <mark>Lambda</mark> <mark>Typescript</mark>\n"
+  description: "Develop/Design/Build a fullstack integration for a Content Management System using Node/React in AWS/Serverless. Integration of data storage solutions. \n* Build efficient, testable, and reusable modules and classes. Conduct testing and deploy into production. \n* Contribute to planning/concept/design of information architecture. \n* Design and Develop React JS front-end application CMS. \n* Provide technical support to the team during the devlopment of the application solution.\n* Determine business requirements and translate into component architecture within a limited timescale. \n* Determine front-end application architecture. Initial integration into a AWS Cognito SDK using React/Redux Sagas pushing to CircleCI/AWS pipeline. \n* Design/Develop CMS for company use. Semantic UI interface with React, immutable, redux sagas, jest/enzyme unit testing.\n"
