--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -22,3 +22,22 @@
   dates: "November 2018 to February 2019"
   quote: "<mark>Node</mark>  <mark>React</mark>  <mark>Redux</mark> \n<mark>AWS</mark>  <mark>Serverless</mark> <mark>Lambda</mark> <mark>Typescript</mark>\n"
   description: "Develop/Design/Build a fullstack integration for a Content Management System using Node/React in AWS/Serverless. Integration of data storage solutions. \n* Build efficient, testable, and reusable modules and classes. Conduct testing and deploy into production. \n* Contribute to planning/concept/design of information architecture. \n* Design and Develop React JS front-end application CMS. \n* Provide technical support to the team during the devlopment of the application solution.\n* Determine business requirements and translate into component architecture within a limited timescale. \n* Determine front-end application architecture. Initial integration into a AWS Cognito SDK using React/Redux Sagas pushing to CircleCI/AWS pipeline. \n* Design/Develop CMS for company use. Semantic UI interface with React, immutable, redux sagas, jest/enzyme unit testing.\n"
+- layout: left
+  company: "Big Clever Learning"
+  job_title: "Javascript Software Developer"
+  dates: "April 2017 to November 2017"
+  quote: "<mark>Node</mark>  <mark>React</mark>  <mark>Redux</mark> \n<mark>AWS</mark>  <mark>Koa</mark> <mark>MicroServices</mark> <mark>Typescript</mark> <mark>OpenAPI Spec</mark>\n"
+  description: "Develop a series of microservice application architecture counselling applications. Solve complex performance problems and architectural challenges. \n* Integration of data storage solutions. \n* Build efficient, testable, and reusable modules and classes. \n* Conduct testing and deploy into production. Updating, repairing, modifying and developing legacy code and generic applications. \n* Contribute to planning/concept/design of information architecture. \n* Contribute and add to Node microservices API, add libraries and develop functionality. \n* Run environments through Docker containers and local services. \n* Develop components for React applications for counselling services. \n* Build components to detailed specications. Congure payment services, webhooks to Stripe. Build database schemas. Jest/Mocha mock/dontMock unit testing. Redux/Redux Saga middleware."
+- layout: left
+  company: Futurebrand
+  job_title: "PHP / Javascript Software Developer"
+  dates: "October 2016 to March 2017"
+  quote: "<mark>Craft</mark>  <mark>PHP</mark>  <mark>JQuery</mark> <mark>Ajax</mark>\n"
+  description: "Develop and integrate OAuth services for global clients and further develop functionality for administration components. Build efficient, testable, and reusable modules and classes. Solve complex performance problems and architectural challenges, SAML & OAuth integration. \n* Integration of data storage solutions. \n* Conduct testing and deployninto production. \n* Updating, repairing, modifying and developing legacy code and generic applications. \n* Contribute to concept/pitching digital experiences for brands & agencies. \n* Build Craft CMS PHP plugins to extend functionality of\nadministration system for asset management services for global clients."
+-
+  layout: left
+  company: 'Purple Bridge Publishing Group'
+  job_title: 'Senior Developer / Team Lead'
+  dates: 'October 2016 to March 2017'
+  quote: "<mark>Laravel</mark>  <mark>PHP</mark>  <mark>JQuery</mark> <mark>Ajax</mark> <mark>DevOps</mark> <mark>MySQL</mark>\n"
+  description: "Develop and lead dev team. Typical LAMP stack. Server congurations and pipeline setup, Docker containers. TDD Unit testing with PHPUnit. Design, develop, test, support and deploy custom web applications. Design and develop testing and maintenance procedures and activities. Assist and support junior team members on multiple projects. Implement best practices, standards and procedures. Develop and document design, source base and architecture. Maintain and manage existing code bases. Design, develop and implement solutions to user’s needs and requirements. \n* Write, review and improvise code. \n* Coordinate with directors and business analysts to determine functionalities. \n* Design and develop technical solutions to complex business problems. \n* Design and develop data analysis solutions. \n* Design and develop logical and physical data models that meet application requirements. \n* Design, build and deploy web services including API, databases, websites and office management software."
