--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ phone: 07754 832442
 website: https://marclally.github.io
 
 # Dark Mode (true/false/never)
-darkmode: true
+darkmode: false
 
 # Social links
 # twitter_username:
