--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,14 +1,20 @@
 - layout: left
-  company: Codegazer (self employed)
-  job_title: "Senior Javascript Developer"
-  dates: "February 2020 to August 2020"
-  quote: "<mark>Node</mark>  <mark>GraphQL</mark>  <mark>AWS</mark>  <mark>Serverless</mark> <mark>Lambda</mark> <mark>Typescript</mark> <mark>React</mark>\n"
+  company: "SportStack"
+  job_title: "Contract Senior Frontend Developer"
+  dates: "June 2020 to August 2020"
+  quote: "<mark>Node</mark>  <mark>GraphQL</mark>  <mark>AWS</mark>  <mark>Serverless</mark> <mark>Lambda</mark> <mark>Typescript</mark> <mark>React</mark> <mark>Jenkins</mark>\n"
+  description: "* "Develop and enhance the main front end platform - website.\n * Writing reusable, testable, and efficient code.\n * Well-practiced Test driven development. \n * Design and implementation of low-latency, high-availability, and performant applications. \n * Implementation of security and data protection. \n * Integration of data storage solutions. \n"
+- layout: left
+  company: "KarmaRama (Sainsburys)"
+  job_title: "Contract Developer"
+  dates: "March 2020 to June 2020"
+  quote: "<mark>Node</mark>  <mark>GraphQL</mark>  <mark>AWS</mark>  <mark>Serverless</mark> <mark>Lambda</mark> <mark>Typescript</mark> <mark>React</mark> <mark>PHP</mark> <mark>Linux</mark>\n"
   description: "* Refactor existing code source based on best-practices & standards.\n * Writing reusable, testable, and efficient code.\n * Well-practiced Test driven development. \n * Design and implementation of low-latency, high-availability, and performant applications. \n * Implementation of security and data protection. \n * Integration of data storage solutions. \n"
 - layout: left
   company: "KFC Western Europe"
-  job_title: "Javascript Software Developer"
+  job_title: "PHP/Javascript Software Developer"
   dates: "February 2019 to November 2019"
-  quote: "<mark>Node</mark>  <mark>React</mark>  <mark>AWS</mark>  <mark>Serverless</mark> <mark>Lambda</mark> <mark>Postgres</mark> <mark>Redis</mark> <mark>Typescript</mark>\n"
+  quote: "<mark>Linux</mark> <mark>Node</mark>  <mark>React</mark>  <mark>AWS</mark>  <mark>Serverless</mark> <mark>Lambda</mark> <mark>Postgres</mark> <mark>Redis</mark> <mark>Typescript</mark>  <mark>PHP</mark> <mark>JQuery</mark>\n"
   description: "Develop and design integrations between our digital ordering systems, point of sale system, payment solutions \nand related tools to support those systems. Develop internal applications to allow for digital orders placed through \n3rd party integrations. \n\n* Ensure data integrity between systems through integration layers.\n* Migrated legacy codebase (Heroku) into new AWS Technical Architecture that supported a new digital transformation \n  project whilst maintaining high availability for existing services with a broad scope that included frontend, backend, POS systems and Salesforce.\n* Design and develop new user-facing and backend features.\n* Develop specications and designs for complex applications whilst modifying/maintaining complex existing applications.\n* Perform code analysis, requirements analysis, identication of code metrics, system risk analysis and software reliability analysis.\n* Performance tuning, improvement, balancing, usability, testing.\n* Design and develop backend services and structure.\n"
 - layout: left
   company: Preqin
@@ -20,7 +26,7 @@
   company: MelodyVR
   job_title: "Javascript Software Developer"
   dates: "November 2018 to February 2019"
-  quote: "<mark>Node</mark>  <mark>React</mark>  <mark>Redux</mark> \n<mark>AWS</mark>  <mark>Serverless</mark> <mark>Lambda</mark> <mark>Typescript</mark>\n"
+  quote: "<mark>Node</mark>  <mark>React</mark>  <mark>Redux</mark> \n<mark>AWS</mark>  <mark>Serverless</mark> <mark>Lambda</mark> <mark>Typescript</mark> <mark>Linux</mark>\n"
   description: "Develop/Design/Build a fullstack integration for a Content Management System using Node/React in AWS/Serverless. Integration of data storage solutions. \n* Build efficient, testable, and reusable modules and classes. Conduct testing and deploy into production. \n* Contribute to planning/concept/design of information architecture. \n* Design and Develop React JS front-end application CMS. \n* Provide technical support to the team during the devlopment of the application solution.\n* Determine business requirements and translate into component architecture within a limited timescale. \n* Determine front-end application architecture. Initial integration into a AWS Cognito SDK using React/Redux Sagas pushing to CircleCI/AWS pipeline. \n* Design/Develop CMS for company use. Semantic UI interface with React, immutable, redux sagas, jest/enzyme unit testing.\n"
 - layout: left
   company: "Big Clever Learning"
@@ -38,5 +44,23 @@
   company: "Purple Bridge Publishing Group"
   job_title: "Senior Developer / Team Lead"
   dates: "January 2015 to September 2016"
-  quote: "<mark>Laravel</mark>  <mark>PHP</mark>  <mark>JQuery</mark> <mark>Ajax</mark> <mark>DevOps</mark> <mark>MySQL</mark>\n"
+  quote: "<mark>Laravel</mark>  <mark>PHP</mark>  <mark>JQuery</mark> <mark>Ajax</mark> <mark>DevOps</mark> <mark>MySQL</mark> <mark>Linux</mark>\n"
   description: "Develop and lead dev team. Typical LAMP stack. Server congurations and pipeline setup, Docker containers. TDD Unit testing with PHPUnit. Design, develop, test, support and deploy custom web applications. Design and develop testing and maintenance procedures and activities. Assist and support junior team members on multiple projects. Implement best practices, standards and procedures. Develop and document design, source base and architecture. Maintain and manage existing code bases. Design, develop and implement solutions to user’s needs and requirements. \n* Write, review and improvise code. \n* Coordinate with directors and business analysts to determine functionalities. \n* Design and develop technical solutions to complex business problems. \n* Design and develop data analysis solutions. \n* Design and develop logical and physical data models that meet application requirements. \n* Design, build and deploy web services including API, databases, websites and office management software."
+  - layout: left
+  company: "MediaCode"
+  job_title: "Senior Software Developer"
+  dates: "May 2006 to October 2014"
+  quote: "<mark>PHP</mark>  <mark>JQuery</mark> <mark>Ajax</mark> <mark>DevOps</mark> <mark>MySQL</mark> <mark>HTML</mark> <mark>Linux</mark>\n"
+  description: "Design, develop, and maintain custom applications that integrate with business applications.  \n* Interact with customers to develop business requirements. \n* Define and document architecture and functional and design requirements. \n* Conform to coding conventions and change control and product release policies. \n* Participate in the continuous process improvement of solutions. \n*  Design and develop database management systems, image processing, collaborative tools, data manipulation, techniques, data visualization techniques, and directory services."
+  - layout: left
+  company: "Orange"
+  job_title: "Business Support Analyst"
+  dates: "March 2001 to February 2006"
+  quote: "<mark>Laravel</mark>  <mark>PHP</mark>  <mark>JQuery</mark> <mark>Ajax</mark> <mark>DevOps</mark> <mark>MySQL</mark>\n"
+  description: "I worked in a business operations role for the global franchising team who operated internationally. I provided technical development and guidance for integration and migration of company branding for digital services. \n* Work with other Analysts and users to understand business reporting requirements. \n* Develop and implement report objects supporting end-user business requirements. \n* Assist in the creation of development standards and processes. \n* Monitor jobs and troubleshoot the environment. \n* Work with Engineers to support them through integration into existing application layers. \n*  Design and develop automated applications and reporting solutions."
+  - layout: left
+  company: "HSBC"
+  job_title: "Software Engineer"
+  dates: "1997 to 2001"
+  quote: "<mark>PHP</mark>  <mark>JQuery</mark> <mark>Ajax</mark> <mark>DevOps</mark> <mark>MySQL</mark>\n"
+  description: "I developed and provided technical support for online banking applications"
