--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,13 +3,13 @@
   job_title: "Contract Senior Frontend Developer"
   dates: "June 2020 to August 2020"
   quote: "<mark>Node</mark>  <mark>GraphQL</mark>  <mark>AWS</mark>  <mark>Serverless</mark> <mark>Lambda</mark> <mark>Typescript</mark> <mark>React</mark> <mark>Jenkins</mark>\n"
-  description: "* "Develop and enhance the main front end platform - website.\n * Writing reusable, testable, and efficient code.\n * Well-practiced Test driven development. \n * Design and implementation of low-latency, high-availability, and performant applications. \n * Implementation of security and data protection. \n * Integration of data storage solutions. \n"
+  description: "Develop and enhance the main front end platform - website.\n * Writing reusable, testable, and efficient code.\n * Well-practiced Test driven development. \n * Design and implementation of low-latency, high-availability, and performant applications. \n * Implementation of security and data protection. \n * Integration of data storage solutions. \n"
 - layout: left
   company: "KarmaRama (Sainsburys)"
   job_title: "Contract Developer"
   dates: "March 2020 to June 2020"
   quote: "<mark>Node</mark>  <mark>GraphQL</mark>  <mark>AWS</mark>  <mark>Serverless</mark> <mark>Lambda</mark> <mark>Typescript</mark> <mark>React</mark> <mark>PHP</mark> <mark>Linux</mark>\n"
-  description: "* Refactor existing code source based on best-practices & standards.\n * Writing reusable, testable, and efficient code.\n * Well-practiced Test driven development. \n * Design and implementation of low-latency, high-availability, and performant applications. \n * Implementation of security and data protection. \n * Integration of data storage solutions. \n"
+  description: "Refactor existing code source based on best-practices & standards.\n * Writing reusable, testable, and efficient code.\n * Well-practiced Test driven development. \n * Design and implementation of low-latency, high-availability, and performant applications. \n * Implementation of security and data protection. \n * Integration of data storage solutions. \n"
 - layout: left
   company: "KFC Western Europe"
   job_title: "PHP/Javascript Software Developer"
